[package]
name = "dronegowski_functions"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
dronegowski_network = { path = "../dronegowski_network" }
simplelog = "^0.12.0"
bincode = "1.3"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
fern = "0.7.1"
